Fix spacing

--- a/resources/assets/css/main.css
+++ b/resources/assets/css/main.css
@@ -73,7 +73,7 @@ p {
 	font-family: "Quicksand" !important;
 }
 #about {
-	padding-bottom: 20px;
+	padding-bottom: 100px;
 }
 
 /*---------------------------------------------------*/
